# python-zwiftclient

./: README.rst  setup.cfg  tox.ini
doc/manpages/: zwift.1
doc/source/: conf.py  index.rst  zwiftclient.rst
zwiftclient/: __init__.py  client.py  shell.py  version.py
