[metadata]
name = python-zwiftclient
summary = Zwift API Client Library
description-file =
    README.rst
author = Constantine Peresypkin
author-email = constantine.peresypk@rackspace.com
home-page = http://www.zerovm.org/
classifier =
    Environment :: Zwift
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zwiftclient
data_files =
    share/man/man1 = doc/manpages/zwift.1

[entry_points]
console_scripts =
    zwift = zwiftclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
